# Todo_App

./: README.md  pyproject.toml  test_todo_app.py
.claude/agents/: todo-spec-reviewer.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/constitution/: 1-create-todo-constitution.constitution.prompt.md
history/prompts/general/: 001-enhanced-messages.general.prompt.md  1-todo-app-implementation.general.prompt.md
history/prompts/todo-console-app/: 2-create-todo-app-plan.plan.prompt.md  3-create-todo-app-tasks.tasks.prompt.md
specs/todo-console-app/: data-model.md  quickstart.md  research.md  tasks.md
specs/todo-console-app/contracts/: task-api.md
src/: main.py  task_manager.py
